# KittyDataMine

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  DataSetParser.h  HorsesDataSetParser.h  main.cpp
src/final/: README  kpnn.h  main_iris.cpp  ria.h  riona.h  utils.h
src/final/.ipynb_checkpoints/: Results-checkpoint.ipynb
src/final/data/.ipynb_checkpoints/: preprocess-checkpoint.py
src/final/data/legacy/csv_old/: german.csv  haberman.csv
src/final/data/stats/: example.json  tae.json
src/final/results/: zoo.json
src/src/: a.out  example  example.cpp  example_result.json  kmnn.h  knn.h  kpnn.h  main.cpp  main2.cpp  main_example.cpp  main_iris.cpp  main_iris_checkpoint.cpp  main_tae.cpp  main_zoo.cpp  metric.h  observation.h  parsers.h  ria.h  riona.h  rule.h  ulils.h  utils.h  zoo
src/src/.ipynb_checkpoints/: Results-checkpoint.ipynb
src/src/data/: preprocess.py
src/src/data/arff/: example.arff
src/src/data/csv/: example.csv  tae.csv
src/src/data/legacy/csv_old/: iris.csv
src/src/data/stats/: iris.json  zoo.json
src/src/legacy/: main_iris.cpp
src/src2/: a.out  kmnn.h  observation.h  ria.h  riona.h
src/src2/data/arff/: german.arff  zoo.arff
src/src2/data/legacy/: iris.json
src/src2/data/legacy/csv_old/: german_result.csv  (+1 more)
src/src2/legacy/: main3.cpp  main_german.cpp  main_haberman.cpp
src/src2/temp/: applyn.h
src/src3/: Untitled.ipynb  b.out  kmnn.h  main_iris.cpp  metric.h  riona.h  utils.h
src/src3/data/: iris.csv  preprocess.py
src/src3/data/csv/: zoo.csv
src/src3/legacy/: example.csv
src/src3/temp/: example.cpp
(+2 files in other folders)
